--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,11 @@ jobs:
 
     - name: Build project
       run: npx vite build # 프로젝트 빌드 명령어를 실행합니다.
+      
+    - name: Install LFTP
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y lftp
 
     - name: Transfer files via SCP
       env:
