--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,9 @@ jobs:
 
     - name: Build project
       run: npx vite build # 프로젝트 빌드 명령어를 실행합니다.
+
+    - name: List dist directory contents
+      run: ls -al dist
       
     - name: Install LFTP
       run: |
