--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,8 +39,6 @@ jobs:
         SERVER_PASSWORD: ${{ secrets.SERVER_PASSWORD }}
       run: 
         lftp -u  ${{ secrets.SERVER_USERNAME }},${{ secrets.SERVER_PASSWORD }} ftp://${{ secrets.SERVER_HOST }}:21 -e "
-        cd /html;
-        lcd dist;
-        mput *;
+        mirror -R dist /html;
         bye
         "
